스웨거, 배포시작, 배포 중단