@@ -8,7 +8,7 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.5'
+    id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.google.protobuf' version "${protobufPluginVersion}"
 }
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
     // gRPC core dependencies
@@ -115,96 +115,3 @@ sourceSets {
         }
     }
 }
-
-
-// plugins {
-// 	id 'java'
-// 	id 'org.springframework.boot' version '3.4.5'
-// 	id 'io.spring.dependency-management' version '1.1.7'
-// 	id 'com.google.protobuf' version '0.9.4' // 프로토버프 플러그인
-// }
-
-// group = 'com.pado'
-// version = '0.0.1-SNAPSHOT'
-
-// java {
-// 	toolchain {
-// 		languageVersion = JavaLanguageVersion.of(17)
-// 	}
-// }
-
-// configurations {
-// 	compileOnly {
-// 		extendsFrom annotationProcessor
-// 	}
-// }
-
-// repositories {
-// 	mavenCentral()
-// }
-
-// dependencies {
-// 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-// 	// implementation 'org.springframework.boot:spring-boot-starter-security' 일단 시큐리티 주석 처리 해둠. 추후 유저 서비스 구현하면서 시큐리티도 포함 시킬 예정
-// 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-// 	implementation 'org.springframework.boot:spring-boot-starter-web'
-// 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-// 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	
-// 	// gRPC 관련
-// 	implementation 'io.grpc:grpc-netty-shaded:1.64.0'
-//     implementation 'io.grpc:grpc-protobuf:1.64.0'
-//     implementation 'io.grpc:grpc-stub:1.64.0'
-//     implementation 'com.google.protobuf:protobuf-java:3.25.1'
-//     // 최신 버전으로 업데이트 (Spring Boot 3.x 호환)
-//     implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
-//     // compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
-//     // implementation 'org.lognet:grpc-spring-boot-starter:4.5.11' // Spring Boot 호환
-	
-// 	compileOnly 'org.projectlombok:lombok'
-// 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-// 	runtimeOnly 'com.mysql:mysql-connector-j'
-// 	annotationProcessor 'org.projectlombok:lombok'
-	
-// 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-// 	testImplementation 'org.springframework.security:spring-security-test'
-// 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-// }
-
-// tasks.named('test') {
-// 	useJUnitPlatform()
-// 	jvmArgs += ["-Djdk.attach.allowAttachSelf=true"]
-// }
-
-// tasks.processResources {
-//     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-// }
-
-// protobuf {
-//     protoc {
-//         artifact = 'com.google.protobuf:protoc:3.25.1'
-//     }
-//     plugins {
-//         grpc {
-//             artifact = 'io.grpc:protoc-gen-grpc-java:1.64.0'
-//         }
-//     }
-//     generateProtoTasks {
-//         all().each { task ->
-//             task.plugins {
-//                 grpc {}
-//             }
-//         }
-//     }
-// }
-
-// sourceSets {
-//     main {
-//         proto {
-//             srcDir 'src/main/proto'
-//         }
-//         java {
-//             srcDirs 'build/generated/source/proto/main/java', 'build/generated/source/proto/main/grpc'
-//         }
-//     }
-// }
